--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
+    <div>Что я знаю о програмировании: <p>Программи́рование — процесс создания и модификации компьютерных программ.(<span>скопировал с википедии</span>) </p></div>
+
+    <div>Что я знаю о it: <p>Информацио́нные техноло́гии: процессы, использующие совокупность средств и методов сбора, обработки, накопления и передачи данных (<span>так же взял из википедии</span>) </p></div>
+
 </body>
 </html>
